--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Nav Bar -->
     <nav class="navbar navbar-expand-lg navbar-light ">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">TinDog</a>
+        <a class="navbar-brand" href="#">TinDog1111</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
